# tap-paychex

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_paychex/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_paychex/schemas/: companies.json  paychex-openapi-spec.json  time_off_requests.json  time_users.json  workers.json  workers_communication.json  workers_status_history.json
tests/: __init__.py  test_core.py
